# stereo_driver

./: Visualize_Chest_Camera.py  Visualize_RGB_jpg_updated.py  saved_offsets.txt
20210701_inlab_inair_calibration/: metrics.md  stereo_correction.py
20210701_inlab_inair_calibration/Left/: 00_left.tiff  01_left.tiff  02_left.tiff  03_left.tiff  04_left.tiff  05_left.tiff  06_left.tiff  07_left.tiff  08_left.tiff  09_left.tiff  10_left.tiff  11_left.tiff  12_left.tiff  13_left.tiff  14_left.tiff  15_left.tiff  16_left.tiff  17_left.tiff  18_left.tiff  19_left.tiff  20_left.tiff  21_left.tiff  22_left.tiff
20210701_inlab_inair_calibration/Right/: 00_right.tiff  01_right.tiff  02_right.tiff  03_right.tiff  04_right.tiff  05_right.tiff  06_right.tiff  07_right.tiff  08_right.tiff  09_right.tiff  10_right.tiff  11_right.tiff  12_right.tiff  13_right.tiff  14_right.tiff  15_right.tiff  16_right.tiff  17_right.tiff  18_right.tiff  19_right.tiff  20_right.tiff  21_right.tiff  22_right.tiff
chest_camera_stream/: CMakeLists.txt  cRedis.h  main.cpp
flir_stereo_stream/: PoorMansHelper.cpp  PoorMansHelper.h  main.cpp  main_my.cpp  make_dbg.sh  make_rel.sh  read_may.txt  record_head.csv  record_no_head.csv  run_spinview.sh
stereo_calibration/: CMakeLists.txt  OceanOneRectifier.cpp  RectificationMap.cpp  RectificationMap.h  cRedis.cpp  cameras2D.yml  configure2D.yml  rectify.cpp  rectify.h  rectifyOld.cpp  results2D.yml
